[package]
name = "fistrum"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/Kurobyte/lorem-fistrum"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5" }
clap = { version = "3.1.15", features = ["derive"] }